# identity-sc

./: .gitignore  Cargo.toml  README.md  erdpy.data-storage.json  mxpy.data-storage.json
.github/workflows/: on_release_build_contracts.yml
interaction/: devnet.snippets.sh  manage.snippets.sh  snippets.sh  testnet.snippets.sh
meta/: Cargo.toml
meta/src/: main.rs
src/: config.rs  earn.rs  earn_proxy.rs  errors.rs  lib.rs  stake.rs  trust.rs
tests/: earn_core_distribute_tests.rs  earn_core_stake.rs  earn_core_stake_tests.rs  earn_core_unstake.rs  earn_core_withdraw.rs  earn_core_withdraw_tests.rs  earn_lp_distribute_tests.rs  earn_lp_stake.rs  earn_lp_stake_tests.rs  earn_lp_unstake.rs  earn_lp_withdraw.rs  earn_lp_withdraw_tests.rs  earn_rewards_claim_tests.rs  earn_rewards_splitting_tests.rs  remove_avatar_tests.rs  set_avatar_tests.rs  set_image_tests.rs  setup.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
