[package]
name = "identity"
version = "1.0.0"
authors = ["Micha Vie <micha@peerme.io>", "Peerme <hello@peerme.io>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"
[dependencies.multiversx-sc]
version = "0.43.5"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.43.5"
