[package]
name = "identity-meta"
version = "0.2.0"
authors = ["Micha Vie <micha@freeiam.com>", "Superciety <hello@superciety.com>"]
edition = "2018"
publish = false

[dependencies.identity]
path = ".."

[dependencies.elrond-wasm]
version = "0.29.3"

[dependencies.elrond-wasm-debug]
version = "0.29.3"
